Improved UI. Added list categorizatio of movies

--- a/src/App.css
+++ b/src/App.css
@@ -3,42 +3,30 @@
 @import "../src/styles/movieModal.css";
 @import "../src/styles/form.css";
 @import "../src/styles/lists.css";
+@import "../src/styles/navigator.css";
 
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body { 
+  background: linear-gradient(to bottom, #1b1f3b, #292929); /* Dark navy to charcoal gradient */
+  color: #e0e0e0; /* Light grey text for contrast */
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: "Montserrat", sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  border-radius: 8px !important;
+  padding: 8px 16px !important;
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  opacity: 0.8;
+}
+
+.app-text {
+  color: #f5c518 !important;
 }
