--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,28 +85,13 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.main-container {
+  min-height: 100vh;
 }
 
 .main-container {
-  min-height: 100vh;
+  h1 {
+    color: #f5c518;
+  }
 }
 
