--- a/src/styles/movieModal.css
+++ b/src/styles/movieModal.css
@@ -4,7 +4,7 @@
 }
 
 .modal-dialog .poster {
-    width: 80%;
+    width: 50%;
 }
 
 .modal-dialog .content {
@@ -20,8 +20,13 @@
 }
 
 .modal-dialog .info h5 {
-    margin-bottom: 40px;
+    margin-bottom: 5px;
     word-wrap: break-word;
+}
+
+.additional-info {
+    padding-top: 1% !important;
+    margin-bottom: 20px;
 }
 
 .modal-dialog .button-container {
